--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,63 +1,43 @@
-version: '3.8'
-
 services:
-  acne-sense-api:
+  api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: acne-sense-api
-    restart: unless-stopped
     ports:
       - "8000:8000"
-    environment:
-      - FLASK_APP=run.py
-      - FLASK_DEBUG=0
-      - OLLAMA_API_URL=http://ollama:11434/api/generate
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_KEY=${SUPABASE_KEY}
-      - DEFAULT_MODEL=qwen2:7b
     volumes:
       - ./data:/app/data
+    env_file:
+      - .env
     depends_on:
-      ollama:
-        condition: service_healthy
+      - ollama
     networks:
       - acne-sense-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
 
   ollama:
     image: ollama/ollama:latest
-    container_name: ollama
-    restart: unless-stopped
+    volumes:
+      - ollama-models:/root/.ollama
     ports:
       - "11434:11434"
-    volumes:
-      - ollama-data:/root/.ollama
     networks:
       - acne-sense-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
       interval: 30s
       timeout: 10s
-      retries: 5
-      start_period: 60s
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+      retries: 3
 
 networks:
   acne-sense-network:
     driver: bridge
 
 volumes:
-  ollama-data:
-    driver: local
+  ollama-models:
