--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -23,12 +23,6 @@ executing==2.2.0
 flask==3.1.1
 fonttools==4.58.0
 frozenlist==1.6.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.169.0
-google-auth==2.40.1
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.70.0
 gotrue==2.12.0
 greenlet==3.2.2
 grpcio==1.71.0
@@ -65,6 +59,7 @@ optuna==4.3.0
 packaging==25.0
 pandas==2.2.3
 parso==0.8.4
+pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 pluggy==1.6.0
@@ -74,6 +69,7 @@ propcache==0.3.1
 proto-plus==1.26.1
 protobuf==5.29.4
 psutil==7.0.0
+ptyprocess==0.7.0
 pure-eval==0.2.3
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -87,7 +83,6 @@ pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
-pywin32==310
 pyyaml==6.0.2
 pyzmq==26.4.0
 realtime==2.4.3
