--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   acne-sense-api:
     build:
@@ -12,15 +10,14 @@ services:
     environment:
       - FLASK_APP=run.py
       - FLASK_DEBUG=0
-      - OLLAMA_API_URL=http://ollama:11434/api/generate
+      - VLLM_API_URL=http://vllm-service:8080/v1/completions
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_KEY=${SUPABASE_KEY}
-      - DEFAULT_MODEL=qwen2:7b
+      - DEFAULT_MODEL=Qwen/Qwen2.5-7B-Instruct
     volumes:
       - ./data:/app/data
     depends_on:
-      ollama:
-        condition: service_healthy
+      - vllm-service
     networks:
       - acne-sense-network
     healthcheck:
@@ -30,22 +27,18 @@ services:
       retries: 3
       start_period: 40s
 
-  ollama:
-    image: ollama/ollama:latest
-    container_name: ollama
+  vllm-service:
+    image: vllm/vllm-openai
+    container_name: vllm-service
     restart: unless-stopped
     ports:
-      - "11434:11434"
+      - "8080:8080"
     volumes:
-      - ollama-data:/root/.ollama
+      - ./models:/models:ro  #
+    command: >
+      --model /models/Qwen2.5-3B-Instruct-AWQ
     networks:
       - acne-sense-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
     deploy:
       resources:
         reservations:
@@ -59,5 +52,5 @@ networks:
     driver: bridge
 
 volumes:
-  ollama-data:
+  vllm-models:
     driver: local
