build(docker): improve port management

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -27,8 +27,12 @@ ENV FLASK_APP=app:create_app
 ENV FLASK_ENV=production
 ENV PYTHONPATH=/app
 
-# Expose port
-EXPOSE 8000
+# Accept build argument for port
+ARG FLASK_PORT=8000
+ENV FLASK_PORT=${FLASK_PORT}
 
-# Use gunicorn for production
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--worker-tmp-dir", "/dev/shm", "--workers", "4", "--timeout", "300", "--access-logfile", "-", "--error-logfile", "-", "app:create_app()"]
+# Expose port from environment
+EXPOSE ${FLASK_PORT}
+
+# Use gunicorn for production with port from environment
+CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:${FLASK_PORT} --worker-tmp-dir /dev/shm --workers 4 --timeout 300 --access-logfile - --error-logfile - 'app:create_app()'"]
