--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,5 @@
 FROM python:3.11-slim
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
 
 # Copy requirements first for better caching
@@ -17,18 +12,17 @@ RUN pip install gunicorn
 # Copy application code
 COPY . .
 
-# Create a non-root user
-RUN adduser --disabled-password --gecos '' appuser && \
-    chown -R appuser:appuser /app
-USER appuser
-
 # Set environment variables
 ENV FLASK_APP=app:create_app
 ENV FLASK_ENV=production
 ENV PYTHONPATH=/app
 
-# Expose port
-EXPOSE 8000
+# Accept build argument for port
+ARG FLASK_PORT=8000
+ENV FLASK_PORT=${FLASK_PORT}
 
-# Use gunicorn for production
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--worker-tmp-dir", "/dev/shm", "--workers", "4", "--timeout", "300", "--access-logfile", "-", "--error-logfile", "-", "app:create_app()"]
+# Expose port from environment
+EXPOSE ${FLASK_PORT}
+
+# Use gunicorn for production with port from environment
+CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:${FLASK_PORT} --worker-tmp-dir /dev/shm --workers 4 --timeout 300 --access-logfile - --error-logfile - 'app:create_app()'"]
