--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -1,10 +1,15 @@
+name: acne-sense-gemini
+
 services:
-  api:
+  acne-sense-api:
+    image: acne-sense-gemini:latest
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - FLASK_PORT=${FLASK_PORT}
     ports:
-      - "8000:8000"
+      - "${FLASK_PORT}:${FLASK_PORT}"
     volumes:
       - ./data:/app/data
     env_file:
@@ -13,7 +18,7 @@ services:
       - acne-sense-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:${FLASK_PORT}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
