chore: update requirements.txt

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,7 @@
 numpy==1.26.4
-torch
-torchvision
+pyyaml
 tflite-runtime    
 flask
-tensorflow
-ultralytics 
-numpy==1.26.4
 pandas
 python-dotenv
 scikit-learn
