--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -14,13 +14,12 @@ Dockerfile
 docker-compose*.yaml
 .dockerignore
 
-# Data and models (these are mounted as volumes)
-data/
-models/
-
 # Development files
 notebook.ipynb
 curl_commands.txt
+deploy-model.sh
+test-endpoint.py
+request.json
 
 # Git and other VCS
 .git/
