--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "marked": "^15.0.12",
     "mysql2": "^3.14.1"
   }
 }
