--- a/api/docker-compose.dev.yaml
+++ b/api/docker-compose.dev.yaml
@@ -4,7 +4,7 @@ services:
     image: acne-sense-api:latest
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
       args:
         - FLASK_PORT=${FLASK_PORT}
     container_name: acne-sense-api
@@ -12,11 +12,11 @@ services:
     ports:
       - "${FLASK_PORT}:${FLASK_PORT}"
     env_file:
-      - .env
+      - .env.dev
     environment:
       - FLASK_APP=run.py
-      - FLASK_DEBUG=0
-      # - VLLM_API_URL=http://127.0.0.1:${VLLM_PORT}/v1
+      - FLASK_ENV=development
+      - VLLM_API_URL=http://acne-sense-vllm:${VLLM_PORT}/v1
     volumes:
       - ./data:/app/data
     depends_on:
@@ -37,7 +37,7 @@ services:
     ports:
       - "${VLLM_PORT}:${VLLM_PORT}"
     env_file:
-      - .env
+      - .env.dev
     volumes:
         - ~/.cache/huggingface:/root/.cache/huggingface
         - ./models:/models
