--- a/api/docker-compose.prod.yaml
+++ b/api/docker-compose.prod.yaml
@@ -15,7 +15,7 @@ services:
       - .env
     environment:
       - FLASK_APP=run.py
-      - FLASK_DEBUG=0
+      - FLASK_ENV=production
       - GOOGLE_APPLICATION_CREDENTIALS=/app/service-account-key.json
     volumes:
       - ./data:/app/data
