--- a/api/Dockerfile.local
+++ b/api/Dockerfile.local
@@ -14,14 +14,14 @@ RUN pip install --no-cache-dir opencv-python-headless
 COPY requirements.dev.txt .
 
 # Install other requirements after
-RUN pip install --no-cache-dir -r requirements.dev.txt
+RUN pip install --no-cache-dir -r requirements.local.txt
 
 # Copy application code
 COPY . .
 
 # Set environment variables
 ENV FLASK_APP=app:create_app
-ENV FLASK_ENV=production
+ENV FLASK_ENV=deployment
 ENV PYTHONPATH=/app
 
 # Accept build argument for port
