--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
