build(docker): setup docker

--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -1,6 +1,5 @@
-# Virtual environment
-.acne-sense-api-venv/
-**/__pycache__/
+# Python specific
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
@@ -8,27 +7,20 @@
 env/
 venv/
 *-venv/
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
 
-# Docker files (not needed inside the container)
-Dockerfile
+# Docker files
+Dockerfile*
 docker-compose*.yaml
 .dockerignore
 
-# Data and models (these are mounted as volumes)
-data/
-models/
+# Environment files
+.env*
+!.env.example
 
 # Development files
-notebook.ipynb
+*.ipynb
 curl_commands.txt
-
-# Git and other VCS
-.git/
-.gitignore
-
-# Cache folders
-.cache/
-
-# Environment files (for security reasons)
-.env
-.flaskenv
