--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -21,7 +21,7 @@ COPY . .
 
 # Set environment variables
 ENV FLASK_APP=app:create_app
-ENV FLASK_ENV=production
+ENV FLASK_ENV=development
 ENV PYTHONPATH=/app
 
 # Accept build argument for port
@@ -31,5 +31,4 @@ ENV FLASK_PORT=${FLASK_PORT}
 # Expose port from environment
 EXPOSE ${FLASK_PORT}
 
-# Use gunicorn for production with port from environment
 CMD ["sh", "-c", "gunicorn --bind 0.0.0.0:${FLASK_PORT} --worker-tmp-dir /dev/shm --workers 4 --timeout 300 --access-logfile - --error-logfile - 'app:create_app()'"]
