--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "npm-run-all --parallel dev:server dev:vite",
+    "dev:server": "nodemon server.js",
+    "dev:vite": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -22,7 +26,11 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "npm-run-all": "^4.1.5",
+    "vite": "^6.3.5",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-manifest-sri": "^0.2.0"
   },
   "keywords": [
     "acne",
