--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,6 +38,12 @@ services:
     restart: unless-stopped
     depends_on:
       - acne-sense-api
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
 networks:
   acne-sense-network:
