--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
       - "3000:3000"
     env_file:
       - ./web/.env
+    environment:
+      - NODE_ENV=production
     networks:
       - acne-sense-network
     restart: unless-stopped
