--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: acne-sense-api:latest
     build:
       context: ./api
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
       args:
         - FLASK_PORT=${FLASK_PORT:-5000}
     ports:
@@ -13,11 +13,16 @@ services:
     volumes:
       - ./api/data:/app/data
       - ./api/models:/app/models
+      - ./api/service-account-key.json:/app/service-account-key.json:ro
     env_file:
       - ./api/.env
+    # environment:
+    #   - QDRANT_URL=http://qdrant:6333
     networks:
       - acne-sense-network
     restart: unless-stopped
+    # depends_on:
+    #   - qdrant
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${FLASK_PORT:-5000}/health"]
       interval: 30s
@@ -46,6 +51,18 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+
+  # qdrant:
+  #   image: qdrant/qdrant:latest
+  #   container_name: qdrant-main
+  #   restart: unless-stopped
+  #   ports:
+  #     - "6333:6333"
+  #     - "6334:6334"
+  #   volumes:
+  #     - ./qdrant_storage_main:/qdrant/storage
+  #   networks:
+  #     - acne-sense-network
 
 networks:
   acne-sense-network:
