--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^12.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.16.0",
     "supabase": "^2.24.3",
