--- a/.github/workflows/deploy-web.yaml
+++ b/.github/workflows/deploy-web.yaml
@@ -118,11 +118,11 @@ jobs:
         run: |
           # Set environment-specific variables
           if [[ "${{ env.DEPLOY_ENV }}" == "staging" ]]; then
-            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.STAGING_API_URL }}"
+            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.STAGING_API_URL }},SITE_URL=https://acne-sense-web-staging-143761779858.asia-southeast1.run.app,APP_DOMAIN=acne-sense-web-staging-143761779858.asia-southeast1.run.app"
           elif [[ "${{ env.DEPLOY_ENV }}" == "web-staging" ]]; then
-            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.WEB_STAGING_API_URL }}"
+            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.WEB_STAGING_API_URL }},SITE_URL=https://acne-sense-web-web-staging-143761779858.asia-southeast1.run.app,APP_DOMAIN=acne-sense-web-web-staging-143761779858.asia-southeast1.run.app"
           else
-            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.PROD_API_URL }}"
+            ENV_VARS="${{ env.COMMON_ENV_VARS }},API_BASE_URL=${{ env.PROD_API_URL }},SITE_URL=https://acne-sense-web-143761779858.asia-southeast1.run.app,APP_DOMAIN=acne-sense-web-143761779858.asia-southeast1.run.app"
           fi
           
           echo "DEPLOYMENT_ENV_VARS=${ENV_VARS}" >> $GITHUB_ENV
